refactored according to hw3 specs pdf. working version
